--- a/client/retweets.html
+++ b/client/retweets.html
@@ -3,5 +3,10 @@
 </head>
 
 <body>
-  {{> tweets}}
+  {{> barChart}}
 </body>
+
+<template name="barChart">
+    <svg id="barChart">
+    </svg>
+</template>
