--- a/client/retweets.html
+++ b/client/retweets.html
@@ -3,7 +3,12 @@
 </head>
 
 <body>
-  <header><h1>Yo</h1></header>
+  <header><h1>See what's trending on Twitter in real time</h1>
+    <h2>the most retweeted tweets will accumulate in the bar chart</h2>
+    <form class="input-params">
+      <p>Enter search term: <input type="text" name="track" placeholder="words"></p>
+    </form>
+  </header>
   {{> barChart}}
 </body>
 
