add embed tweet widget and d3 resize

--- a/client/retweets.html
+++ b/client/retweets.html
@@ -1,5 +1,16 @@
 <head>
   <title>Popular tweets</title>
+  <script>
+        ! function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (!d.getElementById(id)) {
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "https://platform.twitter.com/widgets.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }
+        }(document, "script", "twitter-wjs");
+    </script>
 </head>
 
 <body>
@@ -18,7 +29,7 @@
     </div>
   </header>
   
-  <div id="tweet-view" class="ui secondary segment">click a bar to see the tweet</div>
+  <div id="tweet-view">click a bar to see the tweet</div>
   {{> barChart}}
   
 </body>
