vertical bar labels

--- a/client/retweets.html
+++ b/client/retweets.html
@@ -36,7 +36,8 @@
         {{> barChart}}
       </div>
       <div class="column">
-        <div id="tweet-view">click a bar to see the tweet</div>
+        <div id="tweet-view"><p>not seeing much? someone is bound to tweet about it eventually!</p>
+        <p>click a bar to see the tweet</p></div>
       </div>
    </div>
   </div>
