switch to twitter-channel-streams

--- a/client/retweets.html
+++ b/client/retweets.html
@@ -25,6 +25,10 @@
       <div class="sub header">The most retweeted tweets will accumulate in the bar chart</div>
       </div>
     </div>
+    <div class="ui label">
+      search term
+      <i class="delete icon"></i>
+    </div>
     <div class="ui input">
       <form class="input-params">
         Enter search term: <input type="text" name="track" placeholder="words">
