--- a/client/retweets.html
+++ b/client/retweets.html
@@ -40,8 +40,7 @@
         {{> barChart}}
       </div>
       <div class="column">
-        <div id="tweet-view"><p>not seeing much? someone is bound to tweet about it eventually!</p>
-        <p>click a bar to see the tweet</p></div>
+        <div id="tweet-view"></div>
       </div>
    </div>
   </div>
