--- a/client/retweets.html
+++ b/client/retweets.html
@@ -1,5 +1,6 @@
 <head>
   <title>Popular tweets</title>
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.png?v=2">
   <script>
         ! function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
